--- a/api.template
+++ b/api.template
@@ -10,7 +10,7 @@
 
 ### 输入参数
 
-| 参数名称 | 受否必选 | 参数类型 | 参数注解 |
+| 参数名称 | 是否必选 | 参数类型 | 参数注解 |
 | -------- | -------- | -------- | -------- |
 
 {{- range .InputParams}}
@@ -19,7 +19,7 @@
 
 ### 输出参数
 
-| 参数名称 | 受否必选 | 参数类型 | 参数注解 |
+| 参数名称 | 是否必选 | 参数类型 | 参数注解 |
 | -------- | -------- | -------- | -------- |
 
 {{- range .OutputParams}}
@@ -52,7 +52,7 @@
 
 > {{.Comments}}
 
-| 参数名称 | 受否必选 | 参数类型 | 参数注解 |
+| 参数名称 | 是否必选 | 参数类型 | 参数注解 |
 | -------- | -------- | -------- | -------- |
 
 {{- range .Params}}
